assets/custom-theme.scss
@import "reveal-js/dist/theme/template/mixins";
@import "reveal-js/dist/theme/template/settings";

$backgroundColor: #fff;

$mainColor: #31161e;
$headingColor: #31161e;

$mainFontSize: 20px;
$mainFont: "Lato", Helvetica, sans-serif;
$headingFont: "Lato Black", Helvetica, sans-serif;
$headingTextShadow: none;
$headingLetterSpacing: normal;
$headingTextTransform: none;
$headingFontWeight: 600;
$linkColor: #be8a51;
$linkColorHover: lighten($linkColor, 15%);
$selectionBackgroundColor: lighten($linkColor, 25%);

$heading1Size: 2em;
$heading2Size: 1.4em;
$heading3Size: 1.2em;
$heading4Size: 1em;

@import "reveal-js/dist/theme/template/theme";

.reveal-viewport {
    position: relative;
    background: none !important;
}

.reveal-viewport::before {
    content: "";
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;

    background: url("/vidi-background.png") center / cover no-repeat;

    opacity: 0.5;

    z-index: -1;
}

.reveal::after {
    content: "";
    position: fixed;
    bottom: 20px;
    left: 10px;

    width: 120px;
    height: 60px;

    background: url("/vidi-logo.png") no-repeat center / contain;
    pointer-events: none;
    z-index: 10;
}

